Added CI with Sonar
Deleted other useless test
Now jacoco should work

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -293,6 +293,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${maven-javadoc-plugin.version}</version>
         <configuration>
           <sourcepath>${src.dir}</sourcepath>
           <!-- Avoid for missing javadoc comments to be marked as errors -->
