Now it report correcly  on browser
Jacoco shows 67% coverage on BookieAuthZFactory

--- a/pom.xml
+++ b/pom.xml
@@ -1412,7 +1412,7 @@
                 </goals>
                 <configuration>
                   <formats>
-                    <format>XML</format>
+                    <format>HTML</format>
                   </formats>
                 </configuration>
               </execution>
