Try to test Badua
-Set false active by default for Jacoco
-Add badua with dependecy
-Add badua.yml for sonacloud
--->Build in locale fallisce per badua.cli

--- a/pom.xml
+++ b/pom.xml
@@ -1387,7 +1387,7 @@
     <profile>
       <id>JaCoCo-coverage</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
         <property>
           <name>!skipJaCoCoCoverage</name>
         </property>
