--- a/.github/workflows/badua.yml
+++ b/.github/workflows/badua.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build and analyze bookkeeper project
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        run: mvn clean verify -P BaDua-Coverage
+        run: mvn -B -P BaDua-Coverage verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=chiaraiurato_bookkeeper
       - name: Upload report
         uses: actions/upload-artifact@v3
         with:
