--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -24,6 +24,9 @@
   </parent>
   <artifactId>bookkeeper-server</artifactId>
   <name>Apache BookKeeper :: Server</name>
+  <properties>
+    <ba-dua.version>0.6.0</ba-dua.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
@@ -282,6 +285,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
       <!-- Same thing for badua test
      <configuration>
        <trimStackTrace>false</trimStackTrace>
@@ -303,9 +307,7 @@
           <sourcepath>${src.dir}</sourcepath>
           <!-- Avoid for missing javadoc comments to be marked as errors -->
           <doclint>none</doclint>
-          <!--
           <subpackages>org.apache.bookkeeper.client:org.apache.bookkeeper.conf:org.apache.bookkeeper.feature</subpackages>
-          -->
           <groups>
             <group>
               <title>Bookkeeper</title>
@@ -332,7 +334,6 @@
       </activation>
       <properties>
         <!-- Use a stable version instead of SNAPSHOT one -->
-        <ba-dua.version>0.6.0</ba-dua.version>
         <argLine>-javaagent:target/dependency/ba-dua-agent-rt-${ba-dua.version}-all.jar -Doutput.file=target/badua.ser</argLine>
       </properties>
       <!-- Needed for generate the report -->
