Addign test for bookieimpl
First class tested..

--- a/pom.xml
+++ b/pom.xml
@@ -1371,7 +1371,7 @@
 
     <!-- JaCoCo profile -->
     <profile>
-      <id>JaCoCo-coverage</id>
+      <id>JaCoCo-Coverage</id>
       <activation>
         <activeByDefault>false</activeByDefault>
         <property>
