--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -339,37 +339,42 @@
   </build>
   <profiles>
 
-   <profile>
-     <id>mutationPIT</id>
-     <activation>
-       <activeByDefault>false</activeByDefault>
-     </activation>
-     <build>
-       <plugins>
-         <plugin>
-           <groupId>org.pitest</groupId>
-           <artifactId>pitest-maven</artifactId>
-           <configuration>
-             <targetClasses>
-               <param>org.apache.bookkeeper.bookie.BufferedChannel</param>
-               <param>org.apache.bookkeeper.bookie.storage.ldb.WriteCache</param>
-             </targetClasses>
-             <targetTests>
-               <param>org.apache.bookkeeper.tls.BookieAuthZFactoryTest</param>
-             </targetTests>
-           </configuration>
-           <executions>
-             <execution>
-               <phase>test-compile</phase>
-               <goals>
-                 <goal>mutationCoverage</goal>
-               </goals>
-             </execution>
-           </executions>
-         </plugin>
+    <!-- Pit profile -->
+    <profile>
+      <id>mutationPIT</id>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.pitest</groupId>
+          <artifactId>pitest-maven</artifactId>
+          <version>LATEST</version>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>mutationCoverage</goal>
+                </goals>
+                <phase>verify</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <threads>4</threads>
+              <targetClasses>
+                <param>org.apache.bookkeeper.bookie.BookieImpl</param>
+              </targetClasses>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
+
     <profile>
       <id>vertx-http-server</id>
       <dependencies>
