--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -24,10 +24,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 21
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 21
+          java-version: 8.0.372
           distribution: 'zulu' # Alternative distribution options are available.
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
@@ -45,5 +45,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify -P JaCoCo-coverage
+        run: mvn clean verify -P JaCoCo-Coverage
 
